parser/tests/parser/complex/invalid/declaration_recovery_3.mf2
.foo .local $hello = {world}
{{}}
=== spans ===
                    .foo .local $hello = {world}↵{{}}
ComplexMessage      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LocalDeclaration         ^^^^^^^^^^^^^^^^^^^^^^^
Variable                        ^^^^^^
LiteralExpression                        ^^^^^^^
Text                                      ^^^^^
QuotedPattern                                    ^^^^
Pattern             
=== diagnostics ===
Found a statement that is invalid because the keyword 'foo' is keyword. (at @0..5)
  .foo .local $hello = {world}↵{{}}
  ^^^^^
=== ast ===
ComplexMessage {
    span: @0..33,
    declarations: [
        LocalDeclaration {
            start: @5,
            variable: Variable {
                span: @12..18,
                name: "hello",
            },
            expression: LiteralExpression {
                span: @21..28,
                literal: Text {
                    start: @22,
                    content: "world",
                },
                annotation: None,
                attributes: [],
            },
        },
    ],
    body: QuotedPattern {
        span: @29..33,
        pattern: Pattern {
            parts: [],
        },
    },
}